# CyberBall-Showdown-The-Ultimate-PVR-Foosball

./: .gitignore  .gitmodules  .project  LICENSE  README.md
CyberBall/: .cproject  .project  CyberBall Debug.cfg  CyberBallConfig.cfg
CyberBall/inc/: EXTI.h  GPIO_INIT.h  adc.h  servo.h  spi.h  tim1.h  tim2.h  tim7.h  tty.h  usart.h
CyberBall/src/: EXTI.c  GPIO_INIT.c  adc.c  main.c  servo.c  spi.c  support.c  tim1.c  tim2.c  tim7.c  usart.c
CyberBall/startup/: startup_stm32.s
PCB/Hall_effect_sensors/: Hall_effect_sensors-B_Cu.gbr  Hall_effect_sensors-B_Mask.gbr  Hall_effect_sensors-B_Paste.gbr  Hall_effect_sensors-B_Silkscreen.gbr  Hall_effect_sensors-Edge_Cuts.gbr  Hall_effect_sensors-F_Cu.gbr  Hall_effect_sensors-F_Mask.gbr  Hall_effect_sensors-F_Paste.gbr  Hall_effect_sensors-F_Silkscreen.gbr  Hall_effect_sensors-NPTH-drl_map.gbr  Hall_effect_sensors-NPTH.drl  Hall_effect_sensors-PTH-drl_map.gbr  Hall_effect_sensors-PTH.drl  Hall_effect_sensors-job.gbrjob  Hall_effect_sensors.kicad_pcb  Hall_effect_sensors.kicad_prl  Hall_effect_sensors.kicad_pro  Hall_effect_sensors.kicad_sch  fp-info-cache
PCB/Librarys/: Senior_Design.bak  Senior_Design.kicad_sym  Serial_adapter.kicad_sym
PCB/Power_Supply/: Power_Supply-B_Cu.gbr  Power_Supply-B_Mask.gbr  Power_Supply-B_Paste.gbr  Power_Supply-B_Silkscreen.gbr  Power_Supply-Edge_Cuts.gbr  Power_Supply-F_Cu.gbr  Power_Supply-F_Mask.gbr  Power_Supply-F_Paste.gbr  Power_Supply-F_Silkscreen.gbr  Power_Supply-NPTH-drl_map.gbr  Power_Supply-NPTH.drl  Power_Supply-PTH-drl_map.gbr  Power_Supply-PTH.drl  Power_Supply-job.gbrjob  Power_Supply.kicad_pcb  Power_Supply.kicad_prl  Power_Supply.kicad_pro  Power_Supply.kicad_sch  fp-info-cache  fp-info-cache-LAPTOP-JLC
PCB/Senior Design/: Senior Design-B_Adhesive.gbr  Senior Design-B_Cu.gbr  Senior Design-B_Fab.gbr  Senior Design-B_Mask.gbr  Senior Design-B_Paste.gbr  Senior Design-B_Silkscreen.gbr  Senior Design-Edge_Cuts.gbr  Senior Design-F_Adhesive.gbr  Senior Design-F_Courtyard.gbr  Senior Design-F_Cu.gbr  Senior Design-F_Fab.gbr  Senior Design-F_Mask.gbr  Senior Design-F_Paste.gbr  Senior Design-F_Silkscreen.gbr  Senior Design-Margin.gbr  Senior Design-NPTH-drl_map.gbr  Senior Design-NPTH.drl  Senior Design-PTH-drl_map.gbr  Senior Design-PTH.drl  Senior Design-User_Comments.gbr  Senior Design-User_Drawings.gbr  Senior Design-User_Eco1.gbr  Senior Design-User_Eco2.gbr  Senior Design-job.gbrjob  Senior Design.kicad_pcb  Senior Design.kicad_prl  Senior Design.kicad_pro  Senior Design.kicad_sch  Senior Design.kicad_sym  fp-info-cache  ~Senior Design.kicad_sch.lck
PCB/Senior Design2/: Senior Design2.kicad_prl  Senior Design2.kicad_pro  Senior Design2.kicad_sch  fp-info-cache
PCB/Senior Design3/: Senior Design.bak  Senior Design.kicad_pcb  Senior Design.kicad_sch  fp-info-cache
PCB/User_Interface/: User_Interface-B_Cu.gbr  User_Interface-B_Mask.gbr  User_Interface-B_Paste.gbr  User_Interface-B_Silkscreen.gbr  User_Interface-Edge_Cuts.gbr  User_Interface-F_Cu.gbr  User_Interface-F_Mask.gbr  User_Interface-F_Paste.gbr  User_Interface-F_Silkscreen.gbr  User_Interface-NPTH-drl_map.gbr  User_Interface-NPTH.drl  User_Interface-PTH-drl_map.gbr  User_Interface-PTH.drl  User_Interface-job.gbrjob  User_Interface.kicad_pcb  User_Interface.kicad_prl  User_Interface.kicad_pro  User_Interface.kicad_sch  fp-info-cache
Servo STM32 PWM code/: .cproject  .project  Lab_9_Student Debug.cfg  LinkerScript.ld
design/: .cproject  .project  LinkerScript.ld
designCode/: .cproject  .mxproject  .project  STM32F091RCTX_FLASH.ld  designCode.ioc
foosball/: .cproject  .project
nanoBrain/: CMakeLists.txt  Makefile  main-vp3.py  main-vpi3.cpp  main.cpp  main.py  trajSim.py
nanoBrain/cppSolution/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  locator.cpp  main copy.cpp  main.cpp  predictor.cpp
nanoBrain/cppSolution/.cache/clangd/index/: FILE.h.3E2187E08D11E118.idx  cdefs.h.FC477E759ACAD3AA.idx  features.h.839A4F3F7C9A4375.idx  libc-header-start.h.3C576D2EC44F3D51.idx  math.h.01C27C5330238AC3.idx  mathcalls.h.6E280093246D7E22.idx  stddef.h.1230E49C170D6D34.idx  stdint-intn.h.C0BEF0D1BDD5E52D.idx  stdint-uintn.h.64979324EF78275C.idx  stdint.h.4208DA0E8AD4B387.idx  stdint.h.50F5916FD97B669E.idx  stdio.h.39AA179546A5CA11.idx  stdio_lim.h.B167440C64CC714B.idx  ukal.c.86508E51282C3176.idx  ukal.h.D1DEE31E36D8C77E.idx  ukal_type.h.84F03261D065CCD3.idx  ulapack.c.C3C79FFC8959EF21.idx  ulapack.h.45F138047D4262BC.idx  ulapack_options.h.D7138622DC8EF667.idx  ulapack_type.h.1B6C2804473D3470.idx
nanoBrain/cppSolution/include/: camera.h  kalFilter.h  locator.h  predictor.h  uart.h
nanoBrain/cppSolution/src/: camera.cpp  kalFilter copy.cxx  kalFilter.c  kalFilter.cpp  locator.cpp  locator.cxx  main.cpp  predictor.cpp  uart.cpp
spi_testing/: .cproject  .project  LinkerScript.ld
(+600 files in other folders)
